--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -185,7 +185,7 @@
         </activity-alias>
 
         <!-- Trust interface (Privacy category) -->
-        <activity-alias
+        <!--<activity-alias
             android:name=".trust.TrustPreferences"
             android:label="@string/trust_title"
             android:targetActivity="PartsActivity">
@@ -203,10 +203,10 @@
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/summary_empty" />
-        </activity-alias>
+        </activity-alias>-->
 
         <!-- Contributors Cloud (MyDeviceInfo category) -->
-        <activity-alias
+        <!--<activity-alias
             android:name=".contributors.ContributorsCloudFragment"
             android:label="@string/contributors_cloud_fragment_title"
             android:targetActivity="PartsActivity">
@@ -224,7 +224,7 @@
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/summary_empty" />
-        </activity-alias>
+        </activity-alias>!-->
 
         <!-- Anonymous Statistics -->
         <receiver android:name=".lineagestats.ReportingServiceManager"
